--- a/content/posts/better-typography-with-font-variants.mdx
+++ b/content/posts/better-typography-with-font-variants.mdx
@@ -27,6 +27,9 @@ import OldstyleNums from "../../src/demos/oldstyle-nums";
 import ProportionalNums from "../../src/demos/proportional-nums";
 import TabularNums from "../../src/demos/tabular-nums";
 import DiagonalFractions from "../../src/demos/diagonal-fractions";
+import StackedFractions from "../../src/demos/stacked-fractions";
+import Ordinals from "../../src/demos/ordinals";
+import SlashedZero from "../../src/demos/slashed-zero";
 
 Typography on the web has always lagged behind its expression in print. This makes sense, as type on the printed page developed over centuries to a point of complexity that has been hard to capture within the confines of a browser.
 
@@ -309,8 +312,7 @@ font-variant-numeric: normal;
 ### stacked-fractions
 
 <figure>
-  <img src="../../assets/stacked-fractions.png" alt=""/>
-  <figcaption>Font family: Operator Mono</figcaption>
+  <StackedFractions />
 </figure>
 
 Stacked fractions are not as common of a feature in most web fonts as diagonal fractions, but should prove useful with heavily scientific or mathematical content.
@@ -323,8 +325,7 @@ font-variant-numeric: normal;
 ### ordinal
 
 <figure>
-  <img src="../../assets/ordinals.png" alt=""/>
-  <figcaption>Font family: Fedra Sans</figcaption>
+  <Ordinals />
 </figure>
 
 Ordinals like st, nd, rd, and th will appear as standard lowercase letters by default. However, these should ideally appear as smaller raised numbers following the numeral. The `ordinal` value enables that.
@@ -337,8 +338,7 @@ font-variant-numeric: normal;
 ### slashed-zero
 
 <figure>
-  <img src="../../assets/slashed-zero.png" alt=""/>
-  <figcaption>Font family: Operator Mono</figcaption>
+  <SlashedZero />
 </figure>
 
 This enables an alternate zero character with a slash through it.
