--- a/content/posts/implicit-state-sharing-in-react-vue.mdx
+++ b/content/posts/implicit-state-sharing-in-react-vue.mdx
@@ -33,6 +33,10 @@ Imagine this is your ideal API:
 
 `AccordionItem` will contain each section of the accordion that can be expanded or collapsed, `AccordionHeader` will be the place where the user can click to expand or collapse, and `AccordionPanel` will contain the content to be shown or hidden.
 
+<aside>
+  <p>This is a small aside with notes about the article</p>
+</aside>
+
 Each `AccordionItem` will need to maintain some state — whether it is expanded or not. But `AccordionHeader` will also need access to this value, so that it can show the appropriate toggle button. And `AccordionPanel` may also need to access this, since it is the thing being expanded and collapsed.
 
 One possibility is exposing the expanded value to your user through render props and making sure your documentation lets them know they need to pass that down to the header and panel components.
@@ -51,6 +55,10 @@ One possibility is exposing the expanded value to your user through render props
 ```
 
 While this may seem like a decent solution at first, it’s not ideal that the consumer of our component has to worry about the component internals. The fact that `AccordionHeader` and `AccordionPanel` need access to the expanded state should not be something our user has to be concerned about.
+
+<aside>
+  <p>This is a small aside with notes about the article</p>
+</aside>
 
 It should also be noted that while this is a trivial example, your component may be far more complex, with multiple levels of nested components, in which case prop drilling may become quite tedious.
 
